--- a/ideintf/listviewpropedit.lfm
+++ b/ideintf/listviewpropedit.lfm
@@ -1,18 +1,18 @@
-object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
+object ListViewItemsEditorForm: TListViewItemsEditorForm
   ActiveControl = BtnOK
   BorderIcons = [biSystemMenu, biHelp]
-  Caption = 'TreeView Items Editor'
-  ClientHeight = 261
+  Caption = 'ListView Items Editor'
+  ClientHeight = 246
   ClientWidth = 487
-  Constraints.MinHeight = 240
+  Constraints.MinHeight = 200
   Constraints.MinWidth = 400
   OnCreate = FormCreate
   PixelsPerInch = 96
   Position = poScreenCenter
   HorzScrollBar.Page = 486
-  VertScrollBar.Page = 260
+  VertScrollBar.Page = 245
   Left = 313
-  Height = 261
+  Height = 246
   Top = 194
   Width = 487
   object BtnOK: TBitBtn
@@ -25,7 +25,7 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
     TabOrder = 0
     Left = 166
     Height = 25
-    Top = 229
+    Top = 214
     Width = 75
   end
   object BtnCancel: TBitBtn
@@ -39,7 +39,7 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
     TabOrder = 1
     Left = 246
     Height = 25
-    Top = 229
+    Top = 214
     Width = 75
   end
   object BtnApply: TBitBtn
@@ -51,7 +51,7 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
     TabOrder = 2
     Left = 326
     Height = 25
-    Top = 229
+    Top = 214
     Width = 75
   end
   object BtnHelp: TBitBtn
@@ -63,17 +63,17 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
     TabOrder = 3
     Left = 406
     Height = 25
-    Top = 229
+    Top = 214
     Width = 75
   end
   object GroupBox1: TGroupBox
     Anchors = [akTop, akLeft, akRight, akBottom]
     Caption = 'Items'
-    ClientHeight = 195
+    ClientHeight = 180
     ClientWidth = 276
     TabOrder = 4
     Left = 8
-    Height = 213
+    Height = 198
     Top = 8
     Width = 280
     object TreeView1: TTreeView
@@ -84,7 +84,7 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
       OnSelectionChanged = TreeView1SelectionChanged
       Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
       Left = 6
-      Height = 188
+      Height = 173
       Width = 185
     end
     object BtnNewItem: TButton
@@ -122,77 +122,46 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
       Top = 70
       Width = 75
     end
-    object BtnLoad: TButton
-      Anchors = [akTop, akRight]
-      BorderSpacing.InnerBorder = 2
-      Caption = '&Load'
-      OnClick = btnLoadClick
-      TabOrder = 4
-      Left = 198
-      Height = 25
-      Top = 102
-      Width = 75
-    end
-    object BtnSave: TButton
-      Anchors = [akTop, akRight]
-      BorderSpacing.InnerBorder = 2
-      Caption = '&Save'
-      OnClick = btnSaveClick
-      TabOrder = 5
-      Left = 198
-      Height = 25
-      Top = 136
-      Width = 75
-    end
   end
   object GroupBox2: TGroupBox
     Anchors = [akTop, akRight, akBottom]
     Caption = 'Item Properties'
-    ClientHeight = 195
+    ClientHeight = 180
     ClientWidth = 181
     TabOrder = 5
     Left = 296
-    Height = 213
+    Height = 198
     Top = 8
     Width = 185
-    object LabelText: TLabel
-      Caption = 'Text:'
+    object LabelCaption: TLabel
+      Caption = 'Caption:'
       Color = clNone
       FocusControl = edtText
       ParentColor = False
       Left = 8
       Height = 14
       Top = 10
-      Width = 27
+      Width = 42
     end
     object LabelImageIndex: TLabel
       Caption = 'Image Index:'
       Color = clNone
       FocusControl = edtIndexImg
       ParentColor = False
-      Left = 8
+      Left = 9
       Height = 14
       Top = 44
       Width = 66
-    end
-    object LabelSelectedIndex: TLabel
-      Caption = 'Selected index:'
-      Color = clNone
-      FocusControl = edtIndexSel
-      ParentColor = False
-      Left = 6
-      Height = 14
-      Top = 78
-      Width = 75
     end
     object LabelStateIndex: TLabel
       Caption = 'State Index:'
       Color = clNone
       FocusControl = edtIndexState
       ParentColor = False
+      Visible = False
       Left = 8
       Height = 14
-      Top = 110
+      Top = 78
       Width = 62
     end
     object edtText: TEdit
@@ -211,35 +180,14 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
       Top = 38
       Width = 48
     end
-    object edtIndexSel: TEdit
+    object edtIndexState: TEdit
       OnEditingDone = edtIndexStateEditingDone
       TabOrder = 2
+      Visible = False
       Left = 86
       Height = 23
       Top = 72
       Width = 48
     end
-    object edtIndexState: TEdit
-      OnEditingDone = edtIndexStateEditingDone
-      TabOrder = 3
-      Left = 86
-      Height = 23
-      Top = 104
-      Width = 48
-    end
-  end
-  object OpenDialog1: TOpenDialog
-    Title = 'Open'
-    FilterIndex = 0
-    Title = 'Open'
-    left = 176
-    top = 312
-  end
-  object SaveDialog1: TSaveDialog
-    Title = 'Save'
-    FilterIndex = 0
-    Title = 'Save'
-    left = 176
-    top = 347
   end
 end
